--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@types/node": "^16.18.11",
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
     "tsconfig": "workspace:*",
-    "turbo": "latest"
+    "turbo": "latest",
+    "typescript": "^4.5.3"
   },
   "packageManager": "pnpm@8.6.10",
   "name": "cicddesign-system"
